--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "styled-jsx": "^5.1.6"
   },
   "devDependencies": {
+    "@types/geojson": "^7946.0.16",
     "@types/leaflet": "^1.9.21",
     "@types/node": "^20",
     "@types/react": "^19",
